# maodie

./: .gitignore  Cargo.toml  README.deep.md  README.md  README.zh-CN.md  index.md  nx.json  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json  vitest.config.ts
.github/workflows/: deploy-ide.yml
apps/: index.md
apps/ide/: index.html  index.md  package.json  postcss.config.cjs  project.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
apps/ide/src/: compilerClient.test.ts  compilerClient.ts  editor.ts  examples.ts  highlightAdapter.ts  index.md  initialSource.ts  main.ts  state.ts  (+3 more)
crates/: index.md  project.json
crates/maodie_compiler/: Cargo.toml  index.md
crates/maodie_diagnostics/: Cargo.toml  index.md
crates/maodie_syntax/: Cargo.toml  index.md
crates/maodie_syntax/src/: ast.rs  highlight.rs  incremental.rs  lexer.rs  lib.rs  parser.rs
crates/maodie_wasm_api/: Cargo.toml  index.md
crates/maodie_wasm_api/src/: index.md  lib.rs
docs/: core-stdlib.md  index.md  v1-acceptance-report.md
docs/tasks/: 01-rust-workspace-and-nx-bridge.md  02-diagnostics-and-source-model.md  03-lexer.md  04-parser-and-ast.md  05-name-resolution-and-hir.md  06-type-system-v1.md  07-pattern-match-and-errors.md  08-mir-lowering.md  09-core-stdlib.md  10-wasm-backend.md  11-wasm-api-and-ts-wrapper.md  12-cli-integration.md  13-ide-integration.md  14-v1-acceptance-suite.md  15-core-log-formatting.md  README.md  index.md
examples/: hello_world.mao  index.md  main.mao  v1_error.mao  v1_surface.mao
tools/: ide-highlight-smoke.mjs  index.md  style-guard.mjs
(+65 files in other folders)
